--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -74,47 +74,83 @@
             <LinearLayout
                 android:id="@+id/lugarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="144dp"
+                android:layout_height="160dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/paisText"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="80dp"
                     android:layout_weight="1"
-                    android:text="@string/paisTextRegistro" />
+                    android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/paisRegister"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    <TextView
+                        android:id="@+id/paisText"
+                        android:layout_width="166dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:text="@string/paisTextRegistro" />
 
-                <TextView
-                    android:id="@+id/provinciaText"
+                    <Spinner
+                        android:id="@+id/paisRegister"
+                        android:layout_width="275dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="80dp"
                     android:layout_weight="1"
-                    android:text="@string/provinciaTextRegistro" />
+                    android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/provinciaRegister"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    <TextView
+                        android:id="@+id/provinciaText"
+                        android:layout_width="165dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:text="@string/provinciaTextRegistro" />
 
-                <TextView
-                    android:id="@+id/ciudadText"
+                    <Spinner
+                        android:id="@+id/provinciaRegister"
+                        android:layout_width="275dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="80dp"
                     android:layout_weight="1"
-                    android:text="@string/ciudadTextRegistro" />
+                    android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/ciudadRegister"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    <TextView
+                        android:id="@+id/ciudadText"
+                        android:layout_width="167dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_weight="1"
+                        android:gravity="right"
+                        android:text="@string/ciudadTextRegistro" />
+
+                    <Spinner
+                        android:id="@+id/ciudadRegister"
+                        android:layout_width="275dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -146,7 +182,8 @@
                     android:id="@+id/emailRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/emailTextRegistro" />
+                    android:hint="@string/emailTextRegistro"
+                    android:inputType="textEmailAddress" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -158,7 +195,21 @@
                     android:id="@+id/passwordRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/contrasenaTextRegistro" />
+                    android:hint="@string/contrasenaTextRegistro"
+                    android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/passwordNewLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/passwordNewEdit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Contraseña Nueva"
+                    android:inputType="textPassword" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -170,7 +221,10 @@
                     android:id="@+id/passwordValRegister"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/confirme_contrasenaTextRegistro" />
+                    android:hint="@string/confirme_contrasenaTextRegistro"
+                    android:inputType="textPassword"
+                    android:maxLength="16"
+                    android:minLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <TextView
