--- a/app/src/main/res/layout/fragment_pruebaactivity.xml
+++ b/app/src/main/res/layout/fragment_pruebaactivity.xml
@@ -11,9 +11,36 @@
     tools:context="ingenio.myapplication.pruebaactivity$PlaceholderFragment">
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/txtTituloBanner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:gravity="center_horizontal"
+        android:text="prueba"
+        android:textColor="#040404"
+        android:textSize="20dp" />
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtFecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#040404"
+            android:textSize="16dp"
+            android:text="@string/fecha_anuncio" />
+
+        <TextView
+            android:id="@+id/txtMostrarFecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/imageViewBanner"
