--- a/app/src/main/res/layout/activity_mostrar_becas.xml
+++ b/app/src/main/res/layout/activity_mostrar_becas.xml
@@ -15,7 +15,7 @@
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:visibility="invisible" />
+        tools:visibility="gone" />
 
     <ExpandableListView
         android:id="@+id/listView"
